--- a/TAA0000066.yaml
+++ b/TAA0000066.yaml
@@ -1,12 +1,12 @@
-mouse: test
-date: '250218'
-basepath: 'D:\2024\sandra\'
-session: 1
+mouse: 'TAA0000066'
+date: '250225'
+basepath: 'Z:\public\projects\AtApSuKuSaRe_20250129_HFScohort2\TAA0000066\TrainingData\'
+session: 2
 setup: 2 # 1: training upstairs, 2: imaging 313
-stage: 1
+stage: 3
 gain: 2
 speed_threshold: 7
-num_reps: 1000
+num_reps: 20
 landmark_ids: [0,1,2,3,4,5,6,7,8,9] #stages 3,4,6
 # landmark_ids: [7,2] #stage 5
 # goal_ids: [2] #stage 5 (just gas one goal stim) 
